--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,3 +27,6 @@ steps:
     summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/site/jacoco/jacoco.xml"
     reportDirectory: "$(System.DefaultWorkingDirectory)/**/site/jacoco"
     failIfCoverageEmpty: true
+  
+- publish: $(System.DefaultWorkingDirectory)/bin/WebApp
+  artifact: WebApp
